--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,40 @@
 {
-  "name": "WhatName",
-  "short_name": "WhatName",
+  "name": "WhatName!",
+  "short_name": "WhatName!",
   "start_url": "index.html",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/assets/icon/android/Icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon/android/Icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon/android/Icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon/android/Icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon/android/Icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon/android/Icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/assets/icon/android/Icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
