--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/admob-free": "^4.2.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/native-storage": "^4.2.0",
         "@ionic-native/splash-screen": "3.12.1",
@@ -27,15 +28,19 @@
         "@ionic/storage": "2.0.1",
         "angular2-swing": "^0.14.0",
         "angularfire2": "^4.0.0-rc.1",
+        "cordova-admob-sdk": "^0.8.0",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-admob-free": "^0.10.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-ionic": "^1.1.8",
         "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-promise-polyfill": "0.0.2",
         "firebase": "^4.2.0",
         "ionic-angular": "3.6.0",
         "ionic-native": "^2.9.0",
@@ -47,7 +52,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.4",
-        "ionic": "3.10.0",
+        "ionic": "3.10.3",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
@@ -66,7 +71,8 @@
                 "UPDATE_METHOD": "background",
                 "UPDATE_API": "https://api.ionicjs.com",
                 "MAX_STORE": "2"
-            }
+            },
+            "cordova-plugin-admob-free": {}
         },
         "platforms": [
             "android",
